--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,50 +1,23 @@
-// Вложенность
+// # Вложенность
 // Sass позволит вам вкладывать CSS селекторы таким же образом, как и в визуальной иерархии HTML
-nav {
-    ul {
-        color: white;
-        background: {
-            color: black;
-        }
-        font: {
-            style: normal;
-            family: cursive;
-        }
-    }
-}
 
-// Ссылка на родителя &
-a {
-    font-weight: bold;
-    text-decoration: none;
+// # Ссылка на родителя &
 
-    &:hover {
-        text-decoration: overline;
-    }
-}
+// # Вложенные свойства
 
-// Вложенные свойства
-.funky {
-    font: {
-      family: fantasy;
-      size: 30em;
-      weight: bold;
-    }
-  }
 
-// Импорт файлов со стилями
-@import 'reset';
+// # Импорт файлов со стилями
 
-// Переменные
+
+// # Переменные
 // Вы можете хранить в переменных цвета, стеки шрифтов или любые другие значения CSS, которые вы хотите использовать. 
 // Чтобы создать переменную в Sass нужно использовать символ $.
-$var: test;
 
-// На видимость переменных влияет уровень вложенности селекторов. 
+// # На видимость переменных влияет уровень вложенности селекторов. 
 // Если переменная определена вне каких-либо вложенных селекторов, она видна везде. 
 // Переменная может быть определена с !global
 
-// Типы данных
+// # Типы данных
 /*
 В языке sass поддерживается семь основных типов переменных:
 
@@ -69,100 +42,23 @@ maps - карты от одного значения к другому. Данн
 Пример данного типа: (key1: value1, key2: value2).
 */
 
-// Операции
+// # Операции
 
-// Функции
-$grid-with: 40px;
-$gutter-with: 10px;
-@function grid-with($n) {
-    @return $n * $grid-with + ($n - 1) * $gutter-with;
-}
+// # Функции
 
-#sidebar {
-    width: grid-with(5);
-}
-
-// Интерполяции
-
-// Управляющие директивы и выражения
+// # Управляющие директивы и выражения
 // @if, @else if, @else - условия
-$type: monster;
-p {
-    @if $type == ocean {
-        color: blue;
-    } @else if $type == matador {
-        color: red;
-    } @else if $type == monster {
-        color: green;
-    } @else {
-        color: black;
-    }
-}
+
 // @for - циклы
-@for $i from 1 through 12 {
-    .col#{$i} {
-        width: 100% / $i;
-    }
-}
+
 
 // @each - перебор последовательности 
-@each $animal in puma, lion {
-    .#{$animal}-icon {
-        width: 100px;
-        height: 100px;
-        background-color: yellow;
-        background-size: 100%;
-        background-image: url('../icon/#{$animal}.png');
-    }
-}
 
-$i: 1;
-@while $i <= 12 {
-    .s#{$i} {
-        width: 100% / $i;
-    }
-}
+// # Математические операторы
 
-// Математические операторы
-
-// Миксины (примеси)
+// # Миксины (примеси)
 // Миксины позволяют создавать группы деклараций CSS, которые вам придется использовать по нескольку раз на сайте. 
 
-@mixin transform($prop) {
-    -webkit-transform: $prop;
-    -o-transform: $prop;
-    -moz-transform: $prop;
-    -ms-transform: $prop;
-    transform: $prop;
-}
 
-.box {
-    @include transform(rotate(30deg));
-}
-
-// Расширение/Наследование
+// #Расширение/Наследование
 // Используя директиву @extend можно наследовать наборы свойств CSS от одного селектора другому. 
-%message {
-    border: 1px solid #ccc;
-    padding: 10px;
-    color: #333;
-}
-
-.message {
-    @extend %message;
-}
-
-.success {
-    @extend %message;
-    border-color: green;
-}
-
-.error {
-    @extend %message;
-    border-color: red;
-}
-
-.warning {
-    @extend %message;
-    border-color:yellow;
-}
